--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -95,7 +95,7 @@ Steve Mann, the \textit{``father of wearable computing''}\footnote{\url{http://w
 
 In this thesis, where we are concerned with alternate realities as those that are created or modified through means of computers or other apparatus (Mann's `devices'), one might want to consider the terms mediated reality and alternate reality to be one and the same. However in the larger consideration of virtual worlds as quoted in section \ref{intro-parallel-reality}, one might wish to reserve mediated reality specifically for the sub set of experiences that rely upon the application of `devices', whilst the super set of all alternate realities would contain in addition those experiences of simple imagination, storytelling and psychoactive agents.
 
-Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality as a subset of mixed reality, but then further places virtual reality as a subset of augmented reality and in turn mixed reality, a decision not in fitting with Milgram and Kishino's definitions nor with logical deduction. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can and do exist - Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is arguably contrary to his diagram's representation of virtual reality as a subset of augmented reality and in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality in Milgram and Kishino's definition, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced here for those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment and a wholly virtual environment as the logically possible extremes, as in the reality-virtuality continuum and Steed's concept of primary environments).
+Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality as a subset of mixed reality, but then further places virtual reality as a subset of augmented reality and in turn mixed reality, a decision not in fitting with Milgram and Kishino's definitions nor with logical deduction. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can and do exist. Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is arguably contrary to his diagram's representation of virtual reality as a subset of augmented reality and in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality in Milgram and Kishino's definition, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced here for those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment and a wholly virtual environment as the logically possible extremes, as in the reality-virtuality continuum and Steed's concept of primary environments).
 
 \TwoFig{Mann_venn_original.png} {Mann's Venn diagram of alternate realities.} {Mann_venn_original.png}
        {Mann_venn_mod_1.png} {Mann's Venn diagram of alternate realities after modification.} {Mann_venn_mod_1.png}
@@ -564,13 +564,15 @@ With the locus of attention axis representing the environment from which the sti
 	\end{center}	
 \end{figure}
 
-Studying the combined Milgram/Waterworth model shows more clearly that the balance between presence and absence can relate to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth in a subsequent publication:
+Studying the combined Milgram/Waterworth model shows more clearly that the balance between presence and absence can relate to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth:
 
 \begin{quote}
 	\textit{``We may feel hardly present at all in the physical world (a state we call absence) if nothing is happening there that is of interest or that impacts on our well-being, and so it is with mediated presence.''}~\cite{Waterworth2014}
 \end{quote}
 
-Furthermore one can postulate as to the essence of Lifton's vacancy with regard to the combined Milgram/Waterworth model (and thus to the experience of presence in general). Lifton's original definition presents vacancy as the `absence' of a person from one world while they are participating in the other, however the use of this term in Lifton's context differs to its use in the combined Milgram/Waterworth model. Lifton's absence refers to the inability to simultaneously perceive environmental stimuli from \textit{``more than one place (reality)''} while the absence of the combined Milgram/Waterworth model refers to increased conceptual/abstract reasoning resulting in a reduction of perceptual/concrete processing of all environmental stimuli. In terms of the combined Milgram/Waterworth model, the vacancy problem should be thought of as referring to the largely singular nature of a user's position upon the locus of attention axis and the ability of a parallel reality platform toward reducing the problem, by allowing a user to `participate' in two environments at once, can be visualised either as extending the occupiable position upon the locus of attention axis from a singular position to a pair of positions (or as a range between two positions), or as reducing the deflection experienced upon the focus of attention axis from presence toward absence when performing a transition between two positions upon the locus of attention axis.
+Furthermore one can postulate as to the essence of Lifton's vacancy with regard to the combined Milgram/Waterworth model (and thus to the experience of presence in general). Lifton's original definition presents vacancy as the `absence' of a person from one world while they are participating in the other, however the use of this term in Lifton's context differs to its use in the combined Milgram/Waterworth model. Lifton's absence refers to the inability to simultaneously perceive environmental stimuli from \textit{``more than one place (reality)''} while the absence of the combined Milgram/Waterworth model refers to increased conceptual/abstract reasoning resulting in a reduction of perceptual/concrete processing of all environmental stimuli. In terms of the combined Milgram/Waterworth model, the vacancy problem should be thought of as referring to the largely singular nature of a user's position upon the locus of attention axis.
+
+%and the ability of a parallel reality platform toward reducing the problem, by allowing a user to `participate' in two environments at once, can be visualised either as extending the occupiable position upon the locus of attention axis from a singular position to a pair of positions (or as a range between two positions), or as reducing the deflection experienced upon the focus of attention axis from presence toward absence when performing a transition between two positions upon the locus of attention axis.
 
 %The Sensus Dimension - the importance of being awake in class
 %"Even as we sleep dreamlessly..." (example of being 'unconscious' in this regard)
@@ -583,7 +585,7 @@ Furthermore one can postulate as to the essence of Lifton's vacancy with regard 
 
 \label{transitions_in_parallel_reality}
 
-In terms of the combined Milgram/Waterworth model, the novel aspect of parallel reality can be visualised as the ability it imparts upon its user to switch their locus of attention between equivalent vantage points in real and virtual environments. In order to achieve the highest quality of experience with this style of interaction it is vital to determine how best to implement these transitions; that is, to mitigate the increased cognitive load (manifesting as increased conceptual reasoning and reduced perceptual processing) required to comprehend each transition, as this will detract from engagement with the environments and reduce the user's willingness to perform subsequent transitions.
+In terms of the combined Milgram/Waterworth model, the novel aspect of parallel reality can be visualised as the ability it imparts upon its user to freely switch their locus of attention between equivalent vantage points in real and virtual environments. In order to achieve the highest quality of experience with this style of interaction it is vital to determine how best to implement these transitions; that is, to mitigate the increased cognitive load (manifesting as increased conceptual reasoning and reduced perceptual processing) required to comprehend each transition, as this will detract from engagement with the environments and reduce the user's willingness to perform subsequent transitions. The ability of a parallel reality platform to mitigate the vacancy problem can be viewed as how well it reduces the deflection experienced upon the focus of attention axis from presence toward absence when performing a transition between two positions upon the locus of attention axis.
 
 %In the systems developed by this thesis the users maintain mobility, such that they can move around the two environments in tandem, thus extending existing XR platforms that featured static locations at which a user in the real environment could see into the virtual and vice-versa. This combination of unhindered mobility with the ability to transition between real and virtual stimuli thus alleviates the vacancy problem.
 
@@ -620,7 +622,7 @@ Transitions between the virtual world and the real world can be implemented in m
 \subsection{Parallel Reality and the Combined Milgram/Waterworth Model}
 Visualised using the combined Milgram/Waterworth model, the transitions of a parallel reality system are an oscillation between two different positions upon the locus of attention axis. Figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition} shows an example where a user performs a smooth transition between perceiving stimuli from a fully real environment and a fully virtual environment.
 
-Heightened cognitive load required to comprehend the transition is represented by a temporary movement upon the focus axis from presence toward absence (a break in presence). With the ability of a wide field of view (FOV), stereoscopic 3D, head-tracked HMD (such as that used by the Mirrorshades platform developed in this thesis) to produce immersive virtual reality visual stimuli that require fairly limited cognitive processing and our inherent ability to engage with our real surroundings without significant cognitive load, focus is represented as being high (toward the presence extreme) when attending to stimuli from either the real or virtual environments.
+Heightened cognitive load required to comprehend the transition is represented by a temporary movement upon the focus of attention axis from presence toward absence (a break in presence). With the ability of a wide field of view (FOV), stereoscopic 3D, head-tracked HMD (such as that used by the Mirrorshades platform developed in this thesis) to produce immersive virtual reality visual stimuli that require fairly limited cognitive processing and our inherent ability to engage with our real surroundings without significant cognitive load, focus is represented as being high (toward the presence extreme) when attending to stimuli from either the real or virtual environments.
 
 Sensus is expected to be largely task dependent, however when performing a task that involves actively engaging with the visual stimuli from either/both of the real and virtual environments it is expected to be high (toward the conscious extreme). Upon triggering a transition, sensus is expected to increase, as the user centres their attention upon relating the visual stimuli from the new environment to those they were just perceiving from the other environment
 
@@ -705,4 +707,4 @@ Decades of research into alternate realities has furnished us with a rich contin
 
 Although less thoroughly investigated, the concept of creating an alternate reality system by combining two complete environments, one real and the other virtual, into a cross reality system presents an interesting avenue for furthering alternate reality techniques and applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments. Previous cross reality research has focussed upon alleviating this vacancy problem by integrating sensor and actuator infrastructure into the constituent real and virtual environments of a system, such that actions and events in one environment could manifest into the other. However direct visual engagement with both environments was not often possible in these systems and only from predetermined, static locations.
 
-Parallel reality has been introduced as a new category of alternate reality that allows its user to visually engage with both a real and a virtual environment at any position, switching between them at any time. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept further addresses the vacancy problem by truly providing \textit{``the means to be in more than one place (reality) at a time''}\cite{Lifton2007a}.
+Parallel reality has been introduced as a new category of alternate reality that allows its user to visually engage with both a real and a virtual environment at any position, freely switching between them at any time. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept further addresses the vacancy problem by truly providing \textit{``the means to be in more than one place (reality) at a time''}\cite{Lifton2007a}.
