Red pen edits through to end of chapter 2.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -69,7 +69,7 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 
 \section{Objectives and Methodology}
 \label{objectivesandmethodology}
-The design and development of a new alternate reality concept required thorough theoretical comprehension and understanding of existing categories of alternate reality. However to ascertain the merit of a new alternate reality it was all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base evaluation upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality required that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
+The design and development of a new alternate reality concept required thorough theoretical comprehension and understanding of existing categories of alternate reality. However to ascertain the merit of a new alternate reality it was all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base evaluation upon. While predictions and educated extrapolations can be made about the nature of such an experience through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality required that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
 
 \begin{quote}
 	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
