--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -71,7 +71,7 @@ One of the overbearing concepts introduced by Milgram and Kishino is that whilst
 
 With a purely virtual environment, the entire viewport must necessarily be computer modelled in order to be rendered and as such there is complete quantitative information about and between all objects being presented. At the opposite end of the continuum with a completely real environment where none of the viewport is computer modelled there is no quantitative information associated with the content being displayed. At any point between the extremes the environment consists of a mixture of some modelled and some non-modelled content, with the computer associating quantitative information to, and between, the virtual objects, but not necessarily to the real objects or between the virtual and real objects.
 
-Carrying the continuum concept further, Milgram and Kishino illustrated their understanding of augmented reality and also introduced two related new terms; augmented virtuality and mixed reality. Mixed reality describes any environment that is neither completely real nor completely virtual; that is, it encompasses all positions on the continuum between the extremes. Augmented reality is used to describe a real environment upon which virtual objects are overlain and augmented virtuality is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. Both augmented reality and augmented virtuality are encompassed by mixed reality.
+Carrying the continuum concept further, Milgram and Kishino illustrated their understanding of augmented reality and also introduced two new related terms; augmented virtuality and mixed reality. Mixed reality describes any environment that is neither completely real nor completely virtual; that is, it encompasses all positions on the continuum between the extremes. Augmented reality is used to describe a real environment upon which virtual objects are overlain and augmented virtuality is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. Both augmented reality and augmented virtuality are encompassed by mixed reality.
 
 An obvious question raised from studying this figure is at what point toward the centre of the continuum an environment changes from being augmented reality into augmented virtuality or vice-versa. The answer to this question lies with consideration of what `background' environment is receiving the augmentations.
 
@@ -107,7 +107,7 @@ Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reali
   \label{Mann_venn_mod_3.png}
 \end{figure}
 
-Visualising the position of these primary environments, reality and virtual reality, using this same method requires more drastic alteration to the diagram, but is diagnostic in further revealing the relationships between the terms covered in Mann's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows that:
+Visualising the position of the primary environments, reality and virtual reality, using this same method requires more drastic alteration to the diagram, but is diagnostic in further revealing the relationships between the terms covered in Mann's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows that:
 \begin{itemize}
 	\item Mixed reality is the intersection of reality and virtual reality.
 	\item Mediated reality can be comprised from purely real or purely virtual content.
@@ -116,7 +116,7 @@ Visualising the position of these primary environments, reality and virtual real
 	\item Augmented reality and augmented virtuality can feature in modulated reality systems.
 \end{itemize}
 
-This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality terms than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from the original diagram those positions in which a system can exist that is both mixed and modulated, but which is neither augmented reality nor augmented virtuality. Second, the diagram does not accommodate a purely virtual environment that is then modulated; whether such a system would ever be created is debatable, as any modulation that could be performed by modulators external to the virtual environment implementation could almost certainly be better performed by that implementation itself.
+This final iteration of the Venn diagram still contains ambiguity, however it is more diagnostic for categorising the majority of alternate reality terms than the previous two diagrams, whilst also avoiding over-complication. There are two ambiguities to recognise. First, this diagram maintains from the original diagram those positions in which a system can exist that is both mixed and modulated, but which is neither augmented reality nor augmented virtuality. Second, the diagram does not accommodate a purely virtual environment that is then modulated; whether such a system would ever be created is debatable, as any modulation that could be performed by modulators external to the virtual environment implementation could almost certainly be better performed by that virtual environment implementation itself.
 
 %=========================================================================================================
 \subsection{Roy Want's Virtuality Matrix}
@@ -245,7 +245,7 @@ Augmented Virtuality (AV) & A mixed reality environment that features a virtual 
 
 \newcommand{\SLfootnote}{\footnote{Second Life.}}
 
-With the sound understanding of the ecosystem of alternate realities provided by the preceding sections, parallel reality can now be introduced and situated accordingly. In order to do so, it is necessary to properly introduce one additional category of alternate reality, that of \textit{cross reality}. This is a more recent addition to the field of alternate realities, with its roots in the mid to late 2000s, than the more familiar terms covered in previous sections. However as one of its fundamental aspects is shared with parallel reality its inclusion in this discussion is required.
+With the sound understanding of the ecosystem of alternate realities provided by the preceding sections, parallel reality can now be introduced and situated accordingly. In order to do so, it is necessary to properly introduce one additional category of alternate reality, that of \textit{cross reality}. This is a more recent addition to the field of alternate realities, with its roots in the mid to late 2000s, than the more familiar terms covered in previous sections. However as one of its fundamental features is shared with parallel reality its inclusion in this discussion is required.
 
 Cross reality (XR~\cite{kim:practical}) is a mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with a complete virtual environment, facilitating synchronous bidirectional exchange of media and control information between real and virtual environments. Cross reality systems feature two environments, one real and one virtual, both complete unto themselves~\cite{lifton:merging} but enriched by their ability to mutually reflect, influence and merge into one another thanks to bidirectional information flow between them~\cite{kim:practical}. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}, such that actions within the virtual environment can have `extravirtual effects'~\cite{Soraker2010} upon the real environment and vice-versa.
 
@@ -276,7 +276,7 @@ The concept of a bidirectional connection between real and virtual environments,
 
 \subsection{The Vacancy Problem}
 
-One of the driving motivations behind this work was what Lifton dubbed `the vacancy problem':
+One of the driving motivations behind Lifton's work was what he dubbed `the vacancy problem':
 
 \begin{quote}
 \textit{``the noticeable and profound absence of a person from one world, either real or virtual, while they are participating in the other. Simply put, the vacancy problem arises because people do not currently have the means to be in more than one place (reality) at a time.''}~\cite{Lifton2007a}
@@ -406,13 +406,13 @@ The discussion in the previous section highlighted that the first distinguishing
 	\end{center}
 \end{figure}
 
-While the parallel reality concept introduced by this thesis also features two discrete environments, one real and one virtual, that users can transition between visually observing, it does not feature this bidirectional information flow between the environments (other than using sensed real position information to maintain the user's vantage point into the virtual environment). Thus, this concept could not be considered cross reality as it does not meet both of the distinguishing criteria. The term \textbf{parallel reality} is instead proposed to describe the new concept. Parallel reality is thus defined as:
+While the parallel reality concept introduced by this thesis also features two discrete environments, one real and one virtual, that users can freely transition between visually observing, it does not feature this bidirectional information flow between the environments (other than using sensed real position information to maintain the user's vantage point into the virtual environment). Thus, this concept could not be considered cross reality as it does not meet both of the distinguishing criteria. The term \textbf{parallel reality} is instead proposed to describe the new concept. Parallel reality is thus defined as:
 
 \begin{quote}
 	\textbf{Parallel Reality:} A system comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them.
 \end{quote}
 
-Should a bidirectional information flow be introduced to a parallel reality system, or the ability to transition between receiving visual stimuli from either environment be introduced into a cross reality system, one would in effect produce \textit{parallel cross reality}.
+%Should a bidirectional information flow be introduced to a parallel reality system, or the ability to transition between receiving visual stimuli from either environment be introduced into a cross reality system, one would in effect produce \textit{parallel cross reality}.
 
 Picking up the discussion of primary environments once more, if one follows the reasoning that the primary environment of a cross reality system depends upon the method with which the user interacts with the system, it stands that a parallel reality system can be described as one that provides the user with the ability to change this method and thus change their primary environment at will. In this regard we further distinguish a parallel reality system from an augmented reality system, by defining the former as allowing its user to switch between two different primary environments whereas the latter augments one particular primary environment.
 
@@ -431,19 +431,19 @@ This distinction depends partly upon whether one adopts a dualistic concept of v
 
 %=========================================================================================================
 
-However one treats virtual space, a parallel reality system would be unrewarding if the real and virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions and layout as the real environment (representing the same `place') but which presents an \textit{alternative} representation of it has been proven to be a useful modality in previous cross reality research (see section \ref{sec_crossreality}) and it is this arrangement that this thesis explores; in particular where the virtual environment represents the same place as the real environment but at an earlier moment in \textit{time}. This concept of spatially equivalent real and virtual environments has recently been explored under the name `substitutional reality'~\cite{Simeone2015}, but without the ability to switch wholly between the two environments.
+However one treats virtual space, a parallel reality system would be unrewarding if the real and virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions and layout as the real environment (representing the same `place') but which presents an \textit{alternative} representation of it has been proven to be a useful modality in previous cross reality research (see section \ref{sec_crossreality}) and it is this arrangement that this thesis explores; in particular where the virtual environment represents the same place as the real environment but at an earlier moment in \textit{time}. This concept of spatially equivalent real and virtual environments has recently been explored under the name `substitutional reality'~\cite{Simeone2015}, but without the ability to switch between the two environments.
 
 One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. The combination of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth), Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world\footnote{\url{http://www.technologyreview.com/Infotech/18911/}}. The parallel reality platforms developed in this thesis focus on individual locations, however it does not take a great leap of the imagination to comprehend the worth of such a system scaled to larger, even global, application.
 
 Although the use cases for parallel reality systems that feature completely unrelated real and virtual environments (including where the virtual environment is entirely fictitious) may seem limited in terms of possible benefits to understanding or knowledge gain when comparing and contrasting the environments, an educated approach to implementing transitions between these environments, that takes similar considerations as the platforms developed in this thesis, does conceivably have purpose. In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, both in the real world and in the `Metaverse' - analogous to a virtual world akin to Second Life, accessed via a HMD, comprised of entirely synthetic locations with no counterparts in the real world and which is used to accomplish the same tasks for which today we use the Web. Her response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
 
-There is no spatial equivalence in this scenario between the real environment and the virtual environment; they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. Situations of publicly experienced spatially equivalent and non-equivalent alternate realities are also rife in Vernor Vinge's \textit{Rainbows End}:
+There is no spatial equivalence in this scenario between the real environment and the virtual environment; they are not the same `place'. However the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. Situations of publicly experienced spatially equivalent and non-equivalent alternate realities are also rife in Vernor Vinge's \textit{Rainbows End}:
 
 \begin{quote}
 	\textit{``Robert leaned back from the window and reached out to wider universes. Colored maps appeareed before his eyes. These were realities that were geographically far away, not overlaid upon San Diego at all \ldots\ Finally he got a window that promised `public local reality only.' ''}~\cite{Vinge2006}
 \end{quote}
 
-While these situations are currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR\footnote{\url{http://www.samsung.com/global/microsite/gearvr/}} hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one in this fashion while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments and conversing with the people around them, creating instances of polysocial reality. If a parallel reality system were to allow interaction between its user and other virtual environment users who are not part of the parallel reality scenario, it is conceivable that polysocial instances would arise, with parallel reality users socially engaging both with people in their immediate real environment and with people in their immediate virtual environment, even where the latter are not present in the former. This situation would present \textit{``\ldots\ instances of synchronous polysocial reality, multiple presence \ldots\ being activated in different environments.''}\footnote{Personal correspondence with Sally Applin, polysocial reality author.}
+While these situations are currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR\footnote{\url{http://www.samsung.com/global/microsite/gearvr/}} hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one in this fashion while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments and conversing with the people around them, creating instances of polysocial reality. If a parallel reality system were to allow interaction between its user and other virtual environment users who are not part of the parallel reality scenario, it is conceivable that polysocial instances would arise with parallel reality users socially engaging both with people in their immediate real environment and with people in their immediate virtual environment, even where the latter are not present in the former. This situation would present \textit{``\ldots\ instances of synchronous polysocial reality, multiple presence \ldots\ being activated in different environments.''}\footnote{Personal correspondence with Sally Applin, polysocial reality author.}
 
 With the majority of players of popular Massively Multiplayer Online games (MMOs) wishing they could spend more time playing, over a fifth even wanting to spend all of their time in game~\cite{Castronova2006}, and with social roles and the community aspect constituting key aspects of these game's popularity~\cite{Castronova2006, Bartle2004}, informing the implementation of transitions between real and virtual in such systems with the findings of the experiments in this thesis into spatially equivalent parallel reality promises to be beneficial to the further development of 3D social CMC in a wider sense.
 
