--- a/thesis.tex
+++ b/thesis.tex
@@ -27,9 +27,9 @@
 %degree symbol via \textdegree
 \usepackage{textcomp}
 
-%\usepackage{draftwatermark}
-%\SetWatermarkScale{7}
-%\SetWatermarkLightness{0.9}
+\usepackage{draftwatermark}
+\SetWatermarkScale{7}
+\SetWatermarkLightness{0.9}
 
 \usepackage{url}
 
